--- a/.lh/.vscode/settings.json.json
+++ b/.lh/.vscode/settings.json.json
@@ -3,7 +3,7 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 9,
+            "activePatchIndex": 10,
             "patches": [
                 {
                     "date": 1745348260060,
@@ -44,6 +44,10 @@
                 {
                     "date": 1745417151636,
                     "content": "Index: \n===================================================================\n--- \n+++ \n@@ -7,7 +7,8 @@\n     \"Cookin'Up\",\r\n     \"Dendê\",\r\n     \"Fubá\",\r\n     \"Gergelim\",\r\n+    \"Nhoque\",\r\n     \"Orégano\"\r\n   ]\r\n }\n\\ No newline at end of file\n"
+                },
+                {
+                    "date": 1745850944971,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -7,8 +7,9 @@\n     \"Cookin'Up\",\r\n     \"Dendê\",\r\n     \"Fubá\",\r\n     \"Gergelim\",\r\n+    \"Ingrendientes\",\r\n     \"Nhoque\",\r\n     \"Orégano\"\r\n   ]\r\n }\n\\ No newline at end of file\n"
                 }
             ],
             "date": 1745348260060,
